oeis sequence in wavelets.bib

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -4894,6 +4894,7 @@
   month        = {July},
   title        = {The sequence a(n,m) of the m polynomial coefficients of the n-th order B-spline scaled by n!, read by rows, with n in {0,1,2,...} and m in {1,2,3,...,(n+1)\^2}},
   journal      = {Online Encyclopedia of Integer Sequences},
+  number       = {A289358},
   publisher    = {The OEIS Foundation},
   }
 
@@ -4904,6 +4905,7 @@
   month        = {August},
   title        = {The sequence $a(n,m)$ of the m polynomial coefficients of the n-th order B-spline wavelets scaled by $n!2^n$, read by rows, with $n$ in $\{0,1,2,\ldots\}$ and $m$ in $\{1,2,3,\ldots,2(n+1)^2\}$.},
   journal      = {Online Encyclopedia of Integer Sequences},
+  number       = {A290826},
   publisher    = {The OEIS Foundation},
   }
 
