--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -9,10 +9,10 @@
   author       = {Andreas Klappenecker},
   title        = {Algebraic wavelet filters},
   journal      = {International Journal of Imaging Systems and Technology},
-  volume       = {7}, 
-  issue        = {3}, 
+  volume       = {7},
+  issue        = {3},
   month        = {autumn},
-  year         = {1996}, 
+  year         = {1996},
   pages        = {166--169},
   url          = {http://faculty.cs.tamu.edu/klappi/pub.html},
   note         = {http://iaks-www.ira.uka.de/home/klappi/pub.html},
@@ -72,7 +72,7 @@
   urlw         = {http://www.worldcat.org/isbn/0817639594},
   urla         = {http://www.amazon.com/dp/0817639594},
   }
-  
+
 @book{cohen2011,
   author       = {Jonathan Cohen and Ahmed I. Zayed},
   title        = {Wavelets and Multiscale Analysis: Theory and Applications},
@@ -86,7 +86,7 @@
   urlw         = {http://www.worldcat.org/isbn/0817680942},
   urla         = {http://www.amazon.com/dp/0817680942},
   }
-  
+
 @book{chui,
   isbn10       = {0121745848},
   isbn         = {9780121745844},
@@ -145,7 +145,7 @@
   urlw         = {http://www.worldcat.org/isbn/1611970172},
   urla         = {http://www.amazon.com/dp/1611970172},
   }
- 
+
 @article{chui1992,
   author       = {Charles K. Chui and Jian-zhong Wang},
   title        = {On compactly supported spline wavelets and a duality principle},
@@ -338,7 +338,7 @@
 
 @phdthesis{haar1909,
   author       = {Alfr/'ed Haar},
-  title        = {Zur Theorie der orthogonalen Funktionensysteme}, 
+  title        = {Zur Theorie der orthogonalen Funktionensysteme},
   year         = {1909},
   month        = {July},
   publisher    = {Druck von Dieterich},
@@ -352,11 +352,11 @@
 
 @article{haar1910,
   author       = {Alfr/'ed Haar},
-  title        = {Zur Theorie der orthogonalen Funktionensysteme}, 
-  journal      = {Mathematische Annalen}, 
+  title        = {Zur Theorie der orthogonalen Funktionensysteme},
+  journal      = {Mathematische Annalen},
   issn         = {1432-1807},
-  volume       = {69}, 
-  pages        = {331--371}, 
+  volume       = {69},
+  pages        = {331--371},
   year         = {1910},
   month        = {September},
   doi          = {10.1007/BF01456326},
@@ -399,7 +399,7 @@
   urlw         = {http://www.worldcat.org/isbn/0323138365},
   urla         = {http://www.amazon.com/dp/0323138365},
   }
-  
+
 @article{heil1989,
   url          = {http://citeseer.ist.psu.edu/viewdoc/download?doi=10.1.1.132.1241&rep=rep1&type=pdf},
   author       = {Christopher E. Heil and David F. Walnut},
@@ -449,7 +449,7 @@
   pages        = {330},
   url          = {http://books.google.com/books?vid=ISBN9781568810720},
   }
-  
+
 @book{igari1996,
   author       = {Satoru Igari},
   translator   = {Satoru Igari},
@@ -508,10 +508,10 @@
   author       = {Wayne M. Lawton},
   title        = {Tight frames of compactly supported affine wavelets},
   journal      = {Journal of Mathematical Physics},
-  volume       = {31}, 
-  number       = {8}, 
+  volume       = {31},
+  number       = {8},
   month        = {August},
-  year         = {1990}, 
+  year         = {1990},
   pages        = {1898--1901},
   urlx         = {http://scitation.aip.org/getabs/servlet/GetabsServlet?prog=normal&id=JMAPAQ000031000008001898000001&idtype=cvips&gifs=yes},
   }
@@ -520,10 +520,10 @@
   author       = {Wayne M. Lawton},
   title        = {Necessary and sufficient conditions for constructing orthonormal wavelets},
   journal      = {Journal of Mathematical Physics},
-  volume       = {32}, 
-  number       = {1}, 
-  month        = {January}, 
-  year         = {1991}, 
+  volume       = {32},
+  number       = {1},
+  month        = {January},
+  year         = {1991},
   pages        = {57--61},
   }
 
@@ -552,13 +552,13 @@
   url          = {http://books.google.com/books?vid=ISBN0792394186},
   urla         = {http://www.amazon.com/dp/0792394186},
   }
-  
+
 @article{mallat89,
   author       = {St{/'e}phane G. Mallat},
   title        = {Multiresolution Approximations and Wavelet Orthonormal Bases of $L^2(\mathbb{R})$},
   titlex       = {Multiresolution Approximations and Wavelet Orthonormal Bases of $\spLL$},
   journal      = {Transactions of the American Mathematical Society},
-  volume       = {315}, 
+  volume       = {315},
   publisher    = {American Mathematical Society},
   number       = {1},
   month        = {September},
@@ -615,16 +615,28 @@
   language    = {English},
   }
 
-@techreport{oeisA110555,
+@article{oeisA000580,
+  author       = {N. J. A. Sloane },
+  title        = {a(n) = binomial coefficient C(n,7)},
+  journal      = {Online Encyclopedia of Integer Sequences},
+  year         = {2009},
+  month        = {July 07},
+  url          = {http://oeis.org/A110555},
+  publisher    = {The OEIS Foundation},
+  number       = {A000580},
+  }
+
+@article{oeisA110555,
   author       = {Reinhard Zumkeller},
   title        = {Triangle of partial sums of alternating binomial coefficients: T(n,k) = Sum(binomial(n,k)*(-1)\textasciicircum k: 0<=k<=n)},
-  institution  = {The On-Line Encyclopedia of Integer Sequences},
+  journal      = {Online Encyclopedia of Integer Sequences},
   year         = {2005},
   month        = {July 27},
   url          = {http://oeis.org/A110555},
   number       = {A110555},
+  publisher    = {The OEIS Foundation},
   }
-  
+
 @book{pinsky2002,
   isbn         = {9780534376604},
   isbn10       = {0-534-37660-6},
@@ -658,8 +670,8 @@
 @book{prasad,
   author       = {Lakshman Prasad and Sundararaja S. Iyengar},
   title        = {Wavelet Analysis with Applications to Image Processing},
-  publisher    = {CRC Press LLC}, 
-  address      = {Boca Raton}, 
+  publisher    = {CRC Press LLC},
+  address      = {Boca Raton},
   year         = {1997},
   isbn10       = {0-8493-3169-2},
   isbn         = {978-0849331695},
@@ -685,15 +697,15 @@
   urlw         = {http://www.worldcat.org/isbn/1118165667},
   urla         = {http://www.amazon.com/dp/1118165667},
   }
-  
+
 @article{shen,
   author       = {Jianhong Shen and Gilbert Strang},
   title        = {Asymptotic Analysis of Daubechies Polynomials},
   journal      = {Proceedings of the American Mathematical Soceity},
-  volume       = {124}, 
-  number       = {12}, 
+  volume       = {124},
+  number       = {12},
   month        = {December},
-  year         = {1996}, 
+  year         = {1996},
   pages        = {3819--3833},
   url          = {http://www.ams.org/proc/1996-124-12/S0002-9939-96-03557-5/home.html},
   urlw         = {http://citeseer.ist.psu.edu/shen96asymptotic.html},
@@ -729,10 +741,10 @@
   title        = {Wavelets and Dilation Equations: A Brief Introduction},
   journal      = {SIAM Review},
   address      = {Philadelphia},
-  volume       = {31}, 
-  number       = {4}, 
-  pages        = {614--627}, 
-  month        = {December}, 
+  volume       = {31},
+  number       = {4},
+  pages        = {614--627},
+  month        = {December},
   year         = {1989},
   issn         = {0036-1445},
   oclc         = {37699182},
@@ -747,8 +759,8 @@
   isbn         = {9780961408879},
   author       = {Gilbert Strang and Truong Nguyen},
   title        = {Wavelets and Filter Banks},
-  publisher    = {Wellesley-Cambridge Press}, 
-  address      = {Wellesley, MA}, 
+  publisher    = {Wellesley-Cambridge Press},
+  address      = {Wellesley, MA},
   year         = {1996},
   pages        = {520},
   library      = {TK 5102.9.S48},
@@ -778,9 +790,9 @@
   author       = {Wim Sweldens and Robert Piessens},
   title        = {Wavelet Sampling Techniques},
   booktitle    = {1993 Proceedings of the Statistical Computing Section},
-  publisher    = {American Statistical Association},		  
-  pages        = {20--29},		  
-  month        = {August}, 
+  publisher    = {American Statistical Association},
+  pages        = {20--29},
+  month        = {August},
   year         = {1993},
   urlp         = {http://cm.bell-labs.com/who/wim/papers/papers.html},
   url          = {http://citeseer.ist.psu.edu/18531.html},
@@ -823,8 +835,8 @@
   author       = {Gilbert G. Walter and XiaoPing Shen},
   title        = {Wavelets and Other Orthogonal Systems},
   edition      = {2},
-  publisher    = {Chapman and Hall/CRC}, 
-  address      = {New York}, 
+  publisher    = {Chapman and Hall/CRC},
+  address      = {New York},
   year         = {2001},
   urlp         = {http://www.uwm.edu/~ggw/},
   url          = {http://books.google.com/books?vid=ISBN1584882271},
@@ -878,8 +890,8 @@
   urlw         = {http://www.worldcat.org/isbn/0521578949},
   isbn10       = {0521578949},
   isbn         = {9780521578943},
-  }  
-  
+  }
+
 @incollection{zayed2004,
   editor       = {John Benedetto and Ahmed I. Zayed},
   author       = {Ahmed I. Zayed},
