--- a/common/wavelets_partuni.tex
+++ b/common/wavelets_partuni.tex
@@ -51,10 +51,10 @@ constraint on its own:
   \item For a multiresolution system $\mrasys$, the partition of unity property is equivalent to
         $\sum_{n\in\Z} (-1)^n h_n = 0$ \xrefP{thm:pun_zero}.
         As viewed from the perspective of \hi{discrete time signal processing} \xref{app:dsp},
-        %\footnote{\hie{discrete time signal processing}: see \prefpp{app:dsp}.} 
-        this implies that the scaling coefficients form a ``\structe{lowpass filter}"; 
+        %\footnote{\hie{discrete time signal processing}: see \prefpp{app:dsp}.}
+        this implies that the scaling coefficients form a ``\structe{lowpass filter}";
         lowpass filters provide a kind of ``coarse approximation"
-        of a function. And that is what the scaling function is ``supposed" to do---to provide a coarse approximation 
+        of a function. And that is what the scaling function is ``supposed" to do---to provide a coarse approximation
         at some resolution or ``scale" \xrefP{def:mra}.
 \end{liste}
 
@@ -70,7 +70,7 @@ constraint on its own:
   }
 \label{def:pun}
 %-------------------------------------
-\defbox{\begin{array}{M} 
+\defbox{\begin{array}{M}
   {A function $\ff\in\spRR$ forms a \hid{partition of unity} if}
   \\\indentx$\ds\sum_{n\in\Z} \opTrn^n\ff(x) = 1 \qquad \forall x\in\R$.
 \end{array}}
@@ -80,18 +80,18 @@ constraint on its own:
 \section{Scaling functions with partition of unity}
 %=======================================
 
-%\ifdochaselse{sequence}{\prefpp{prop:twz} demonstrates that the}{The} 
-The $Z$ transform \xrefP{def:opZ} of a sequence $\seqn{h_n}$ 
+%\ifdochaselse{sequence}{\prefpp{prop:twz} demonstrates that the}{The}
+The $Z$ transform \xrefP{def:opZ} of a sequence $\seqn{h_n}$
 with sum $\sum_{n\in\Z} (-1)^n\fh_n=0$ has a zero at $z=-1$.
 Somewhat surprisingly, the \prope{partition of unity} and
-\prope{zero at $z=-1$} properties are actually equivalent (next theorem). 
+\prope{zero at $z=-1$} properties are actually equivalent (next theorem).
 
 \begin{center}
 \begin{tabular}{cc}
-  \includegraphics{../common/math/graphics/pdfs/pounityz.pdf}&\includegraphics{../common/math/graphics/pdfs/Fhw.pdf}
+  \includegraphics{../common/math/graphics/pdfs/pounityz.pdf}%
+ &\includegraphics{../common/math/graphics/pdfs/Fhw.pdf}
 \end{tabular}
 \end{center}
-
 
 %--------------------------------------
 \begin{theorem} %[Partition of unity]
@@ -143,29 +143,29 @@ Let $\Ze$ be the set of even integers and $\Zo$ the set of odd integers.
   \\&= \sqrt{\pi} \opDil \sum_{m\in\Z}\fh_m \opFSi \brp{-1}^{km} \opS_2 \opFT\fphi
   \\&= \sqrt{\pi} \opDil \sum_{m\in\Z}\fh_m \brs{\cwt \sum_{k\in\Z} \brp{-1}^{km} \brp{\opS_2 \opFT\fphi} e^{i\frac{2\pi}{2}kx}}
     && \text{by definition of $\opFSi$} && \text{\xref{thm:opFSi}}
-  \\&= \frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Z}  \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m 
+  \\&= \frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Z}  \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m
   \\&=\mathrlap{%
-        \frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Ze} \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m 
-       +\frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Zo}  \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m 
+        \frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Ze} \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m
+       +\frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Zo}  \brp{\opS_2 \opFT\fphi} e^{i\pi kx}\sum_{m\in\Z} \brp{-1}^{km}\fh_m
        }%
   \\&=\mathrlap{
         \frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Ze} \brp{\opS_2 \opFT\fphi} e^{i\pi kx} \mcom{\sum_{m\in\Z}\fh_m}{$\sqrt{2}$}
        +\frac{\sqrt{2\pi}}{2} \opDil \sum_{k\in\Zo}  \brp{\opS_2 \opFT\fphi} e^{i\pi kx} \mcom{\sum_{m\in\Z} \brp{-1}^m\fh_m }{$0$}
        }%
-  \\&= \sqrt{\pi} \opDil \sum_{k\in\Ze} \brp{\opS_2 \opFT\fphi} e^{i\pi kx} 
+  \\&= \sqrt{\pi} \opDil \sum_{k\in\Ze} \brp{\opS_2 \opFT\fphi} e^{i\pi kx}
     && \text{by \prefpp{thm:admiss}}&& \text{and right hypothesis}
-  \\&= \sqrt{\pi} \opDil \sum_{k\in\Ze} \Fphi\brp{\frac{2\pi}{2}k} e^{i\pi kx} 
+  \\&= \sqrt{\pi} \opDil \sum_{k\in\Ze} \Fphi\brp{\frac{2\pi}{2}k} e^{i\pi kx}
     && \text{by definitions of $\opFT$ and $\opS_2$}
-  \\&= \sqrt{\pi} \opDil \sum_{k\in\Z} \Fphi\brp{2\pi k} e^{i2\pi kx} 
+  \\&= \sqrt{\pi} \opDil \sum_{k\in\Z} \Fphi\brp{2\pi k} e^{i2\pi kx}
     && \text{by definition of $\Ze$}
-  \\&= \frac{1}{\sqrt{2}}\opDil \brb{\sqrt{2\pi} \sum_{k\in\Z} \Fphi\brp{2\pi k} e^{i2\pi kx}} 
+  \\&= \frac{1}{\sqrt{2}}\opDil \brb{\sqrt{2\pi} \sum_{k\in\Z} \Fphi\brp{2\pi k} e^{i2\pi kx}}
   \\&= \frac{1}{\sqrt{2}}\opDil \sum_{n\in\Z}\fphi(x+n)
     && \text{by \thme{PSF}} && \text{\xref{thm:psf})}
   \\&= \frac{1}{\sqrt{2}}\opDil \sum_{n}\opTrn^n\fphi
     && \text{by definition of $\opTrn$} && \text{\xref{def:opT}}
 \end{align*}
 
-The above equation sequence demonstrates that 
+The above equation sequence demonstrates that
   \\\indentx$\ds\opDil\sum_n\opTrn^n\fphi = \sqrt{2}\sum_n\opTrn^n\fphi$\\
 (essentially that $\sum_n\opTrn^n\fphi$ is equal to it's own dilation).
 This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
@@ -176,78 +176,78 @@ This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
     && \text{by left hypothesis}
   \\&= \sqrt{2\pi}\: \opFSi \opS \opFT \fphi
     && \text{by \thme{PSF}} && \text{\xref{thm:psf}}
-  \\&= \sqrt{2\pi}\: \opFSi \opS 
+  \\&= \sqrt{2\pi}\: \opFSi \opS
        \mcom{\sqrt{2}
-         \brp{\opDili\sum_{n\in\Z}\fh_n e^{-i\omega n}}\: 
+         \brp{\opDili\sum_{n\in\Z}\fh_n e^{-i\omega n}}\:
          \brp{\opDili \opFT \fphi}
        }{$\opFT\fphi$}
     && \text{by \prefp{lem:Fphi}}
-  \\&= 2\sqrt{\pi}\: \opFSi 
-       \brp{\opS\opDili\sum_{n\in\Z}\fh_n e^{-i\omega n}}\: 
+  \\&= 2\sqrt{\pi}\: \opFSi
+       \brp{\opS\opDili\sum_{n\in\Z}\fh_n e^{-i\omega n}}\:
        \brp{\opS \opFT\opDil \fphi}
     && \text{by \prefp{cor:FTD}}
-  \\&= 2\sqrt{\pi}\: \opFSi 
-       \brp{\opS\frac{1}{\sqrt{2}}\sum_{n\in\Z}\fh_n e^{-i\frac{\omega}{2} n}}\: 
+  \\&= 2\sqrt{\pi}\: \opFSi
+       \brp{\opS\frac{1}{\sqrt{2}}\sum_{n\in\Z}\fh_n e^{-i\frac{\omega}{2} n}}\:
        \brp{\opS \opFT\opDil \fphi}
     && \text{by evaluation of $\opDili$} && \text{\xref{prop:opDi}}
-  \\&= \sqrt{2\pi}\: \opFSi 
-       \brp{\sum_{n\in\Z}\fh_n e^{-i\frac{2\pi k}{2} n}}\: 
+  \\&= \sqrt{2\pi}\: \opFSi
+       \brp{\sum_{n\in\Z}\fh_n e^{-i\frac{2\pi k}{2} n}}\:
        \brp{\opS \opFT\opDil \fphi}
     && \text{by definition of $\opS$}
     && \text{\xref{def:opS}}
-  \\&= \sqrt{2\pi}\: \opFSi 
-       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\: 
+  \\&= \sqrt{2\pi}\: \opFSi
+       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\:
        \brp{\opS \opDili\opF \fphi}
-  \\&= \sqrt{2\pi}\: \opFSi 
-       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\: 
+  \\&= \sqrt{2\pi}\: \opFSi
+       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\:
        \brp{\opS\frac{1}{\sqrt{2}}\Fphi\brp{\frac{\omega}{2}}}
     && \text{by definition of $\opS$} %&& \text{\xref{thm:psf}}
     && \text{\xref{def:opS}}
-  \\&= \sqrt{2\pi}\: \opFSi 
-       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\: 
+  \\&= \sqrt{2\pi}\: \opFSi
+       \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\:
        \brp{\frac{1}{\sqrt{2}}\Fphi\brp{\frac{2\pi k}{2}}}
-  %\\&= \sqrt{\pi}\: \opFSi 
-  %     \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\: 
+  %\\&= \sqrt{\pi}\: \opFSi
+  %     \brp{\sum_{n\in\Z}\fh_n (-1)^{kn}}\:
   %     \brp{\Fphi\brp{\frac{2\pi k}{2}}}
-  \\&= \sqrt{\pi}\: \sum_{k\in\Z} 
-       \sum_{n\in\Z}\fh_n (-1)^{kn}\: 
+  \\&= \sqrt{\pi}\: \sum_{k\in\Z}
+       \sum_{n\in\Z}\fh_n (-1)^{kn}\:
        \Fphi\brp{\pi k}
        e^{i 2\pi kx}
     && \text{by definition of $\opFSi$} && \text{\xref{thm:opFSi}}
   \\&= \mathrlap{%
        \sqrt{\pi}
-       \sum_{\text{$k$ even}} 
-       \sum_{n\in\Z}\fh_n (-1)^{kn}\: 
+       \sum_{\text{$k$ even}}
+       \sum_{n\in\Z}\fh_n (-1)^{kn}\:
        \Fphi\brp{\pi k}
        e^{i 2\pi kx}
        +
        \sqrt{\pi}
-       \sum_{\text{$k$ odd}} 
-       \sum_{n\in\Z}\fh_n (-1)^{kn}\: 
+       \sum_{\text{$k$ odd}}
+       \sum_{n\in\Z}\fh_n (-1)^{kn}\:
        \Fphi\brp{\pi k}
        e^{i 2\pi kx}
        }
   \\&= \mathrlap{%
        \sqrt{\pi}
-       \sum_{\text{$k$ even}} 
-       \brp{\cancelto{\sqrt{2}}{\sum_{n\in\Z}\fh_n}} \: 
+       \sum_{\text{$k$ even}}
+       \brp{\cancelto{\sqrt{2}}{\sum_{n\in\Z}\fh_n}} \:
        \Fphi\brp{\pi k}
        e^{i 2\pi kx}
        +
        \sqrt{\pi}
-       \sum_{\text{$k$ odd}} 
-       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\: 
+       \sum_{\text{$k$ odd}}
+       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\:
        \Fphi\brp{\pi k}
        e^{i 2\pi kx}
        }
   \\&= \mathrlap{%
-       \sqrt{\pi}\sum_{k\in\Z} 
-       \sqrt{2} \: 
+       \sqrt{\pi}\sum_{k\in\Z}
+       \sqrt{2} \:
        \Fphi\brp{\pi 2k}
        e^{i 2\pi 2k x}
        +
        \sqrt{\pi}\sum_{k\in\Z}
-       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\: 
+       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\:
        \Fphi\brp{\pi [2k+1]}
        e^{i 2\pi [2k+1] x}
        \quad\text{by \prefp{thm:admiss}}
@@ -256,7 +256,7 @@ This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
        \Fphi\brp{0}
        %e^{0}
        +
-       \sqrt{\pi}e^{i 2\pi x}\sum_{n\in\Z}\fh_n (-1)^{n}\: 
+       \sqrt{\pi}e^{i 2\pi x}\sum_{n\in\Z}\fh_n (-1)^{n}\:
        \sum_{k\in\Z}
        \Fphi\brp{\pi [2k+1]}
        e^{i 4\pi kx}
@@ -265,18 +265,18 @@ This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
 %
 %
 %  \\&= \sqrt{\pi}\sum_{k\in\Z}\brs{
-%       \sqrt{2} 
+%       \sqrt{2}
 %       \Fphi\brp{2\pi k}
 %       +
-%       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\: 
+%       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\:
 %       \Fphi\brp{\pi [2k+1]}
 %       e^{i 2\pi x}
 %       }e^{i 4\pi kx}
 %  \\&= \sqrt{\pi}\brs{
-%       \sqrt{2} 
+%       \sqrt{2}
 %       \Fphi(0)
 %       +
-%       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\: 
+%       \brp{\sum_{n\in\Z}\fh_n (-1)^{n}}\:
 %       \Fphi(\pi)
 %       e^{i 2\pi x}
 %       }
@@ -380,7 +380,7 @@ This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
 
 \item Proof that (2)$\implies$(3):
   \begin{align*}
-    \sum_{n\in\Ze}\fh_n = \sum_{n\in\Zo}\fh_n 
+    \sum_{n\in\Ze}\fh_n = \sum_{n\in\Zo}\fh_n
       &= \frac{1}{2}\sum_{n\in\Z}\fh_n
       && \text{by (2) and \prefp{prop:dsp_zminone}}
     \\&= \cwt
@@ -403,7 +403,7 @@ This implies that $\sum_n\opTrn^n\fphi$ is a constant \xref{prop:opD_constant}.
 
 
 Not every function that forms a \prope{partition of unity} is a \structe{basis} for an \structe{MRA},
-as formerly stated next and demonstrated by 
+as formerly stated next and demonstrated by
 \prefpp{cnt:pun_sin2} and \prefpp{cnt:pun_rsin}.
 %---------------------------------------
 \begin{proposition}
@@ -460,7 +460,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
     %  \\&= \frac{1}{2}\brs{2-0-0-0}
     %  \\&= 1
     %\end{align*}
-  
+
   \item Proof that $\fphi(x)$ forms a \prope{partition of unity}: by \prefpp{ex:pun_sin2}
     %\begin{align*}
     %  \sum_{n\in\Z} \opTrn^n\fphi(x)
@@ -540,7 +540,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
              +\fh_2 1\cdot1
           \\&=\fh_2
         \end{align*}
-      \item These values for $\seqn{h_0,h_1,h_2}$ are valid for the knot locations $x=\frac{1}{2}$, $x=1$, and $x=\frac{3}{2}$, 
+      \item These values for $\seqn{h_0,h_1,h_2}$ are valid for the knot locations $x=\frac{1}{2}$, $x=1$, and $x=\frac{3}{2}$,
             \textbf{but} they don't satisfy the \fncte{dilation equation} \xref{thm:dilation_eq}. In particular,
             \\\indentx$\ds\fphi(x) \neq \sum_{n\in\Z}\fh_n \opDil\opTrn^n \fphi(x)$
             \\(see the diagram in \prefp{item:sinsin02hn_fig})
@@ -576,7 +576,7 @@ Let a function $\ff$ be defined in terms of a shifted cosine function \xref{def:
    \end{array}\quad\tbox{\includegraphics{../common/math/graphics/pdfs/rsin_pun.pdf}}%
    \\
    \begin{array}{M}
-     \textbf{but} $\setxZ{\opTrn^n\fphi}$ does \textbf{not}\\ 
+     \textbf{but} $\setxZ{\opTrn^n\fphi}$ does \textbf{not}\\
      generate an \structe{MRA}.
    \end{array}\quad\tbox{\includegraphics{../common/math/graphics/pdfs/rsin02hn.pdf}}%
 %\\\mc{2}{M}{Note that $\ds\Ff(\omega)= \frac{1}{2\sqrt{2\pi}}\Big[{\mcom{\frac{2\sin\omega}{\omega}}{$2\sinc(\omega)$}+\mcom{\frac{\sin(\omega-\pi)}{(\omega-\pi)}}{$\sinc(\omega-\pi)$} + \mcom{\frac{\sin(\omega+\pi)}{(\omega+\pi)}}{$\sinc(\omega+\pi)$}}\Big]$}
@@ -638,7 +638,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
             &= \left.\sum_{n=0}^2 \fh_n \left.\left.\cwt \right\{1 + \cos\brs{\pi\brp{\abs{2x-1-n}}}\right\}\setind_\intcc{0}{2}(2x-n)\right|_{x=1}
           \\&=\fh_1 \left.\left.\cwt \right\{1 + \cos\brs{2-1-1}\right\}
           \\&=\fh_1 \sqrt{2}
-          \\&\implies\fh_1 = \cwt 
+          \\&\implies\fh_1 = \cwt
           \\
           \\
           \frac{1}{2}
@@ -648,7 +648,7 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
           \\&\implies\fh_2 = \frac{\sqrt{2}}{4}
         \end{align*}
 
-      \item These values for $\seqn{h_0,h_1,h_2}$ are valid for the knot locations $x=\frac{1}{2}$, $x=1$, and $x=\frac{3}{2}$, 
+      \item These values for $\seqn{h_0,h_1,h_2}$ are valid for the knot locations $x=\frac{1}{2}$, $x=1$, and $x=\frac{3}{2}$,
             \textbf{but} they don't satisfy the \fncte{dilation equation} \xref{thm:dilation_eq}. In particular (see diagram),
             \\\indentx$\ds\fphi(x) \neq \sum_{n\in\Z}\fh_n \opDil\opTrn^n \fphi(x)$ .
     \end{enumerate}
@@ -683,8 +683,8 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 \end{figure}
 As it turns out, all \structe{B-splines} satisfy the \prope{partition of unity} property \xref{thm:bspline_punity}
 \emph{and} the \prope{multi-resolution} property \xref{thm:bspline_2x}.
-See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
-%All of the scaling functions in the examples in this section form a \hie{partition of unity}, 
+See \pref{ex:pun_n=2} (next), \prefpp{app:bspline}, and \prefpp{fig:partuni_Nde} for examples.
+%All of the scaling functions in the examples in this section form a \hie{partition of unity},
 %but yet are not orthogonal.
 %In particular, note that for all of them $\sum_{n\in\Z} (-1)^n\fh_n = 0$ (see \pref{thm:pun_zero}).
 
@@ -699,7 +699,7 @@ See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
 %\prefpp{ex:ortho_n=2} used the admissibility condition (\prefp{thm:admiss})
 %and orthonormal constrained quadrature condition (\prefp{thm:ortho_quadcon})
 %to design a 2 coefficient wavelet analysis.
-%In this example, we remove the orthnormality constraint and replace it with 
+%In this example, we remove the orthnormality constraint and replace it with
 %the more general \hie{partition of unity} constraint
 %(all orthonormal wavelet analyses possess the partition of unity property---
 %\prefp{cor:pun_ortho}).
@@ -715,7 +715,7 @@ See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
   \brb{\begin{array}{FMMD}
     1. & $\support\fphi(x)=\intcc{0}{1}$                             & \xref{thm:mra_support}  & and\\
     2. & \prope{admissibility condition}                             & \xref{thm:admiss}       & and \\
-    3. & \prope{partition of unity}                                  & \xref{thm:pun_zero}     & 
+    3. & \prope{partition of unity}                                  & \xref{thm:pun_zero}     &
    %4. & $\fg_n  = (-1)^n \fh_{\xN-n}^\ast$ $\scy\forall n\in\Z$      & \xref{thm:wavstrct_cqf} & %\xref{thm:cqf}
   \end{array}}
   \implies
@@ -746,12 +746,12 @@ See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
 
   \item Proof for values of $h_0$ and $h_1$:
     \begin{enumerate}
-      \item Method 1: 
-        Under the constraint of two non-zero scaling coefficients, 
-        a scaling function design is fully constrained using the \hie{admissibility equation} \xref{thm:admiss} 
+      \item Method 1:
+        Under the constraint of two non-zero scaling coefficients,
+        a scaling function design is fully constrained using the \hie{admissibility equation} \xref{thm:admiss}
         and the \hie{partition of unity} constraint\ifsxref{partuni}{def:pun}.
         The partition of unity formed by $\fphi(x)$ is illustrated in \prefpp{ex:n0_pounity}. %\prefp{ex:pounity_squarepulse}.
-    
+
         Here are the equations:
         \\\indentx$\ds\begin{array}{rcl@{\qquad}MMM}
          \fh_0 +\fh_1 &=& \sqrt{2}    & (admissibility equation          & \pref{thm:admiss}   & \prefpo{thm:admiss}) \\
@@ -766,7 +766,7 @@ See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
           %g_0 &=\fh_1 \\
           %g_1 &= -h_0
         \end{align*}
-    
+
       \ifdochas{spline}{\item Method 2: By \prefp{thm:Bsplineh}.}
     \end{enumerate}
 
@@ -810,7 +810,7 @@ See \prefpp{app:bspline} and \prefpp{fig:partuni_Nde} for examples.
 %\\\indentx$\brp{\begin{array}{*{9}{c}}
 %    &   &   &   & 1 &   &   &   &  \\
 %    &   &   & 1 &   & 1 &   &   &  \\
-%    &   & 1 &   & 2 &   & 1 &   &  
+%    &   & 1 &   & 2 &   & 1 &   &
 %\end{array}}$
 %\end{proof}
 %
