vanishing moments equation formatting

--- a/common/wavelets/vanish.tex
+++ b/common/wavelets/vanish.tex
@@ -574,8 +574,7 @@ See \prefp{ex:sfixc5}.
 \label{ex:sfixc5}
 %---------------------------------------
 Let $\wavsys$ be a \structe{wavelet system} \xref{def:wavsys} in which
-$\fpsi(x)$ has $5$ vanishing moments.
-\begin{footnotesize}
+$\fpsi(x)$ has $p=5$ vanishing moments.
 \exbox{\begin{array}{lclclclclclclclcl}
   \ds \sum_{k\in\Z}     \fphi(x-k) &=& M_0
   \\
@@ -638,8 +637,6 @@ computing the inverse of the operator matrix.
 \\
 Note that each monomial $x^n$ is simply a linear combination
 of $\seq{\fphi(x-k)}{k\in\Z}$.
-
-\end{footnotesize}
 \end{example}
 \begin{proof}
 \begin{align*}
@@ -734,62 +731,71 @@ of $\seq{\fphi(x-k)}{k\in\Z}$.
       - \sum_{k\in\Z} k^5 \fphi(x-k)
 \end{align*}
 
-\begin{math}
-%  \begin{array}{rr|rrrr@{\hspace{8ex}}rrrr|c}
-  \begin{array}{rr|rrrr@{\hspace{3ex}\hspace{3ex}}rrrr|c}
-    && M_0 & -3M_1 &  3M_2 & -M_3  & 1 & 0 & 0 & 0 &             \\
-    &&   0 &   M_0 & -2M_1 &  M_2  & 0 & 1 & 0 & 0 & \rightarrow \\
-    &&   0 &     0 &   M_0 & -M_1  & 0 & 0 & 1 & 0 &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 & 1 &
-    \\ \\
-    && M_0 & -3M_1 &  3M_2 &    0  & 1 & 0 & 0 &  \frac{M_3}{M_0} &             \\
-    &&   0 &   M_0 & -2M_1 &    0  & 0 & 1 & 0 & -\frac{M_2}{M_0} & \rightarrow \\
-    &&   0 &     0 &   M_0 &    0  & 0 & 0 & 1 &  \frac{M_1}{M_0} &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 & 0 &  1               &
-    \\ \\
-    && M_0 & -3M_1 &     0 &    0  & 1 & 0 & -\frac{3M_2}{M_0} & -\frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0} &             \\
-    &&   0 &   M_0 &     0 &    0  & 0 & 1 &  \frac{2M_1}{M_0} & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}   & \rightarrow \\
-    &&   0 &     0 &   M_0 &    0  & 0 & 0 &  1                &  \frac{M_1}{M_0}                       &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0 &  0                &  1                                     &
-    \\ \\
-    && M_0 &     0 &     0 &    0  & 1 & \frac{3M_1}{M_0} & \frac{6M_1^2}{M_0^2}-\frac{3M_2}{M_0} & \frac{6M_1^3}{M_0^3}-\frac{3M_1M_2}{M_0^2} - \frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0} &             \\
-    &&   0 &   M_0 &     0 &    0  & 0 & 1                &  \frac{2M_1}{M_0}                     & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}                                               & \rightarrow \\
-    &&   0 &     0 &   M_0 &    0  & 0 & 0                &  1                                    & \frac{M_1}{M_0}                                                                    &             \\
-    &&   0 &     0 &     0 &  M_0  & 0 & 0                &  0                                    & 1                                                                                  &
-    \\ \\
-    &&   1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2}{M_0^3}-\frac{3M_2}{M_0^2} & \frac{6M_1^3}{M_0^4}-\frac{3M_1M_2}{M_0^3} - \frac{3M_2M_1}{M_0^3}+\frac{M_3}{M_0^2} &             \\
-    &&   0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2}{M_0^3}-\frac{M_2}{M_0^2}                                                             & \rightarrow \\
-    &&   0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                                                                                  &             \\
-    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                                                                        &
-    \\ \\
-    &&   1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}  &             \\
-    &&   0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2-M_2M_0}{M_0^3}                  & \rightarrow \\
-    &&   0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                            &             \\
-    &&   0 &     0 &     0 &    1  & 0 & 0                &  0                                    & \frac{1}{M_0}                                  &
-  \end{array}
-\end{math}
+\begin{align*}
+  &\brs{\begin{array}{*{8}{r}}
+       M_0 & -3M_1 &  3M_2 & -M_3  & 1 & 0 & 0 & 0
+     \\  0 &   M_0 & -2M_1 &  M_2  & 0 & 1 & 0 & 0
+     \\  0 &     0 &   M_0 & -M_1  & 0 & 0 & 1 & 0
+     \\  0 &     0 &     0 &  M_0  & 0 & 0 & 0 & 1
+  \end{array}}\;\rightarrow
+  \;
+  \brs{\begin{array}{*{8}{r}}
+       M_0 & -3M_1 &  3M_2 &    0  & 1 & 0 & 0 &  \frac{M_3}{M_0}
+     \\  0 &   M_0 & -2M_1 &    0  & 0 & 1 & 0 & -\frac{M_2}{M_0}
+     \\  0 &     0 &   M_0 &    0  & 0 & 0 & 1 &  \frac{M_1}{M_0}
+     \\  0 &     0 &     0 &  M_0  & 0 & 0 & 0 &  1
+  \end{array}}\;\rightarrow
+  \\
+  &\brs{\begin{array}{*{8}{r}}
+       M_0 & -3M_1 &     0 &    0  & 1 & 0 & -\frac{3M_2}{M_0} & -\frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0}
+     \\  0 &   M_0 &     0 &    0  & 0 & 1 &  \frac{2M_1}{M_0} & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}
+     \\  0 &     0 &   M_0 &    0  & 0 & 0 &  1                &  \frac{M_1}{M_0}
+     \\  0 &     0 &     0 &  M_0  & 0 & 0 &  0                &  1
+  \end{array}}\;\rightarrow
+  \\
+  &\brs{\begin{array}{*{8}{r}}
+       M_0 &     0 &     0 &    0  & 1 & \frac{3M_1}{M_0} & \frac{6M_1^2}{M_0^2}-\frac{3M_2}{M_0} & \frac{6M_1^3}{M_0^3}-\frac{3M_1M_2}{M_0^2} - \frac{3M_2M_1}{M_0^2}+\frac{M_3}{M_0}
+     \\  0 &   M_0 &     0 &    0  & 0 & 1                &  \frac{2M_1}{M_0}                     & \frac{2M_1^2}{M_0^2}-\frac{M_2}{M_0}
+     \\  0 &     0 &   M_0 &    0  & 0 & 0                &  1                                    & \frac{M_1}{M_0}
+     \\  0 &     0 &     0 &  M_0  & 0 & 0                &  0                                    & 1
+  \end{array}}\;\rightarrow
+  \\
+  &\brs{\begin{array}{*{8}{r}}
+       1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2}{M_0^3}-\frac{3M_2}{M_0^2} & \frac{6M_1^3}{M_0^4}-\frac{3M_1M_2}{M_0^3} - \frac{3M_2M_1}{M_0^3}+\frac{M_3}{M_0^2}
+     \\0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2}{M_0^3}-\frac{M_2}{M_0^2}
+     \\0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}
+     \\0 &     0 &     0 &    1  & 0 & 0                &  0                                      & \frac{1}{M_0}
+  \end{array}}\;\rightarrow
+  \\
+  &\brs{\begin{array}{*{8}{r}}
+       1 &     0 &     0 &    0  & \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}
+     \\0 &     1 &     0 &    0  & 0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2-M_2M_0}{M_0^3}
+     \\0 &     0 &     1 &    0  & 0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}
+     \\0 &     0 &     0 &    1  & 0 & 0                &  0                                      & \frac{1}{M_0}
+  \end{array}}
+\end{align*}
 
-\begin{eqnarray*}
-  \brs{\begin{array}{l}
+\begin{align*}
+  \brs{\begin{array}{>{\ds}l}
     x^3  \\
     x^2  \\
     x    \\
     1
   \end{array}}
-  &=&
-  \brs{\begin{array}{llll}
-    \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}  \\
-    0 & \frac{1}{M_0}    &  \frac{2M_1}{M_0^2}                     & \frac{2M_1^2-M_2M_0}{M_0^3}                  \\
-    0 & 0                &  \frac{1}{M_0}                          & \frac{M_1}{M_0^2}                            \\
-    0 & 0                &  0                                    & \frac{1}{M_0}
+  &=
+  \brs{\begin{array}{*{4}{>{\ds}l}}
+      \frac{1}{M_0} & \frac{3M_1}{M_0^2} & \frac{6M_1^2-3M_2M_0}{M_0^3} & \frac{6M_1^3-6M_2M_1M_0+M_3M_0^2}{M_0^4}
+    \\0             & \frac{1}{M_0}      &  \frac{2M_1}{M_0^2}          & \frac{2M_1^2-M_2M_0}{M_0^3}
+    \\0             & 0                  &  \frac{1}{M_0}               & \frac{M_1}{M_0^2}
+    \\0             & 0                  &  0                           & \frac{1}{M_0}
   \end{array}}
-  \brs{\begin{array}{l}
-    \sum_{k\in\Z} k^3 \fphi(x-k)  \\
-    \sum_{k\in\Z} k^2 \fphi(x-k)  \\
-    \sum_{k\in\Z} k   \fphi(x-k)  \\
-    \sum_{k\in\Z}     \fphi(x-k)  \\
+  \brs{\begin{array}{>{\ds}l}
+      \sum_{k\in\Z} k^3 \fphi(x-k)
+    \\\sum_{k\in\Z} k^2 \fphi(x-k)
+    \\\sum_{k\in\Z} k   \fphi(x-k)
+    \\\sum_{k\in\Z}     \fphi(x-k)
   \end{array}}
-\end{eqnarray*}
+\end{align*}
 
 
 \begin{align*}
